@startuml

title __CONVERTER's Class Diagram__\n

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.dto {
      package com.engineer.lrogozinski.dto.converter {
        class AccountDtoToAccount {
            + convert()
        }
      }
    }
  }
  

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.dto {
      package com.engineer.lrogozinski.dto.converter {
        class AccountToAccountDto {
            + convert()
        }
      }
    }
  }
  

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.dto {
      package com.engineer.lrogozinski.dto.converter {
        class AccountToUserInfo {
            + convert()
        }
      }
    }
  }
  

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.dto {
      package com.engineer.lrogozinski.dto.converter {
        class EventCategoryDtoToEventCategory {
            + convert()
        }
      }
    }
  }
  

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.dto {
      package com.engineer.lrogozinski.dto.converter {
        class EventCategoryToEventCategoryDto {
            + convert()
        }
      }
    }
  }
  

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.dto {
      package com.engineer.lrogozinski.dto.converter {
        class EventDtoToEvent {
            + EventDtoToEvent()
            + convert()
        }
      }
    }
  }
  

  package com.engineer.lrogozinski {
    package com.engineer.lrogozinski.dto {
      package com.engineer.lrogozinski.dto.converter {
        class EventToEventDto {
            + convert()
        }
      }
    }
  }
  

  AccountDtoToAccount -up-|> Converter
  AccountToAccountDto -up-|> Converter
  AccountToUserInfo -up-|> Converter
  EventCategoryDtoToEventCategory -up-|> Converter
  EventCategoryToEventCategoryDto -up-|> Converter
  EventDtoToEvent -up-|> Converter
  EventDtoToEvent o-- EventCategoryService : eventCategoryService
  EventToEventDto -up-|> Converter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
